# 0.00.29 (56162) Sep 5, 2011
Deadlock, synchronization and threading improvements. Ditched SwingUtilities.invokeAndWait due to issues.
# 0.00.28 (56151) Sep 3, 2011
Increased mouse rotation sensitivity in the main play area
Added minimize/maximize button to the Real Examples
Renamed Real Molecules to Real Examples, a la one demo version
# 0.00.27 (56134) Sep 3, 2011
# 0.00.26 (56132) Sep 3, 2011
9/3/11 Performance improvements
# 0.00.25 (56123) Sep 2, 2011
Bugfixes and improvements
"Real Molecule" area
Bond angles improvements and added checkbox
Many dev options
# 0.00.24 (56007) Aug 31, 2011
8/31/11 Spacefill testing version
# 0.00.23 (56005) Aug 31, 2011
8/31/11 JME3 real molecule view
# 0.00.22 (55934) Aug 30, 2011
8/30/11 Jmol real view tests
# 0.00.21 (55849) Aug 27, 2011
Many UI updates
Removed vecmath from build file since it is already contained in a jme3 jar
# 0.00.20 (55844) Aug 27, 2011
# 0.00.19 (55841) Aug 26, 2011
# 0.00.18 (55840) Aug 26, 2011
8/26/11 Many UI updates
# 0.00.17 (55682) Aug 23, 2011
Start with two single bonds, positioned to show a nice animation at the start
Added background color modification dialog in developer menu
Added dialog on startup failure
Fixed antialiasing startup bug
# 0.00.16 (55371) Aug 17, 2011
# 0.00.15 (55357) Aug 16, 2011
If the mouse is in front of a grabbable object, show a hand cursor
Fixed: Cursor remains as East-West cursor when in the play area
# 0.00.14 (55300) Aug 16, 2011
# 0.00.13 (55221) Aug 15, 2011
# 0.00.12 (55201) Aug 14, 2011
# 0.00.11 (55172) Aug 13, 2011
# 0.00.10 (55009) Aug 9, 2011
# 0.00.09 (54317) Jul 20, 2011
# 0.00.08 (53658) Jun 30, 2011
Use java.io.tmpdir for storing the native libraries
# 0.00.07 (53655) Jun 30, 2011
Updated main to use PhetFrame
Launch the jme canvas within a tabbed PiccoloPhetApplication
Launch the jme application within a PhetFrame, adding the file and help-> about menus
Launch the jme application within a swing window