@@ -1,3 +1,4 @@
+Don't auto-rotate the real example molecule after dragging
 # 0.00.29 (56162) Sep 5, 2011
 Deadlock, synchronization and threading improvements. Ditched SwingUtilities.invokeAndWait due to issues.
 # 0.00.28 (56151) Sep 3, 2011
